--- a/index.html
+++ b/index.html
@@ -6,8 +6,30 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <title>Product cards</title>
   <link rel="stylesheet" href="./style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic" rel="stylesheet">
 </head>
 <body>
-  <h1>Product cards</h1>
+  <div class="card" data-qa="card">
+    <img src="images/imac.jpeg" alt="" class="card__image">
+    <span class="card__title">Моноблок APPLE A1419 iMac 27" Retina 5K (MNED2UA/A)</span>
+    <span class="card__id">Код товара: 195434</span>
+    <div class="reviews-box">
+      <div class="stars">
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+      </div>
+      <span class="review-box--reviews">Отзывов: 5</span>
+    </div>
+    <div class="card--price price-box">
+      <span class="price-box__name">Цена:</span>
+      <span class="price-box__price">69 999 грн</span>
+    </div>
+    <a class="card__link" data-qa="hover">
+      <button class="card__button">Купить</button>
+    </a>
+  </div>
 </body>
 </html>
