--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
   <div class="card" data-qa="card">
     <img src="images/imac.jpeg" alt="" class="card__image">
     <span class="card__title">Моноблок APPLE A1419 iMac 27" Retina 5K (MNED2UA/A)</span>
-    <span class="card__id">Код товара: 195434</span>
-    <div class="reviews-box">
-      <div class="stars">
-        <div class="star"></div>
-        <div class="star"></div>
-        <div class="star"></div>
-        <div class="star"></div>
-        <div class="star"></div>
+    <span class="card__code">Код товара: 195434</span>
+    <div class="card__rating">
+      <div class="card__stars">
+        <div class="card__star"></div>
+        <div class="card__star"></div>
+        <div class="card__star"></div>
+        <div class="card__star"></div>
+        <div class="card__star"></div>
       </div>
-      <span class="review-box--reviews">Отзывов: 5</span>
+      <span class="card__reviews">Отзывов: 5</span>
     </div>
-    <div class="card--price price-box">
-      <span class="price-box__name">Цена:</span>
-      <span class="price-box__price">69 999 грн</span>
+    <div class="card__prices">
+      <span class="card__name">Цена:</span>
+      <span class="card__price">69 999 грн</span>
     </div>
     <a class="card__link" data-qa="hover">
       <button class="card__button">Купить</button>
